// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`convert-esmodule can convert class default exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
class A {}
exports.default = A;
"
`;

exports[`convert-esmodule can convert default exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function test() {}
exports.default = test;
"
`;

exports[`convert-esmodule can convert default imports 1`] = `
"var $csb__b = require(\\"./b\\");
var a = $_csb__interopRequireDefault($csb__b);
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can convert function exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function test() {}
exports.test = test;
const test2 = () => {};
exports.test2 = test2;
class Test {}
exports.Test = Test;
"
`;

exports[`convert-esmodule can convert named imports 1`] = `
"var $csb__b = require(\\"./b\\");
$csb__b.a();
$csb__b.b();
$csb__b.c();
"
`;

exports[`convert-esmodule can convert named imports with different scopes 1`] = `
"var $csb__b = require(\\"./b\\");
$csb__b.a();
function test1() {
  $csb__b.a();
}
function test2(a) {
  a();
  function test3() {
    a();
  }
}
"
`;

exports[`convert-esmodule can convert normal exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__store = require(\\"./test/store.js\\");
exports.test = $csb__store.test;
exports.test2 = $csb__store.test2;
"
`;

exports[`convert-esmodule can convert reexports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__store = require(\\"./test/store.js\\");
Object.keys($csb__store).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  exports[key] = $csb__store[key];
});
"
`;

exports[`convert-esmodule can convert weird default exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__default = a = \\"b\\";
exports.default = $csb__default;
"
`;

exports[`convert-esmodule can handle as imports 1`] = `
"var $csb__b = require(\\"./b\\");
const func = $csb__b.a();
"
`;

exports[`convert-esmodule can handle async code 1`] = `
"var $csb__test = require(\\"./test\\");
var T = $_csb__interopRequireDefault($csb__test);
(async () => {
  const test = await test2();
});
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can handle class properties 1`] = `
"var $csb__test = require(\\"./test\\");
var T = $_csb__interopRequireDefault($csb__test);
class T2 {
  a = () => {
    return \\"test\\";
  }
  b = \\"\\"
  c = {}
  static d = \\"\\"
}
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule can handle inline comments 1`] = `
"var $csb__b = require(\\"./b\\");
$csb__b.a();
$csb__b.c();
"
`;

exports[`convert-esmodule changes default imports inline 1`] = `
"var $csb__rgb = require(\\"./rgb\\");
var rgb = $_csb__interopRequireDefault($csb__rgb);
rgb.default.a;
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule converts object shorthands 1`] = `
"var $csb__templatefactory = require(\\"./template-factory.js\\");
const short = {
  templateFactory: $csb__templatefactory.templateFactory
};
"
`;

exports[`convert-esmodule does empty exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__column_sorting_draggable = require(\\"./column_sorting_draggable\\");
var $csb__data_grid = require(\\"./data_grid\\");
exports.EuiDataGrid = $csb__data_grid.EuiDataGrid;
var $csb__data_grid_types = require(\\"./data_grid_types\\");
Object.keys($csb__data_grid_types).forEach(function (key) {
  if (key === \\"default\\" || key === \\"__esModule\\") return;
  exports[key] = $csb__data_grid_types[key];
});
"
`;

exports[`convert-esmodule doesn't remove object initializers 1`] = `
"var $csb__shared = require(\\"@react-spring/shared\\");
const createHost = (components, {a = () => {}} = {}) => {
  $csb__shared.is();
};
"
`;

exports[`convert-esmodule doesn't set var definitions 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var global = typeof window !== \\"undefined\\" ? window : {};
exports.global = global;
"
`;

exports[`convert-esmodule exports that are not on the root scope are not renamed 1`] = `
"function a() {
  var exports = \\"blaat\\";
}
"
`;

exports[`convert-esmodule handles default as exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__Field = require(\\"./Field\\");
exports.Field = $csb__Field.default;
"
`;

exports[`convert-esmodule handles default imports 1`] = `
"var $csb__react = require(\\"react\\");
var React = $csb__react;
console.log(React.Component);
"
`;

exports[`convert-esmodule handles export mutations 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function test() {}
exports.default = test;
exports.default = test = 5;
"
`;

exports[`convert-esmodule handles export mutations with no named function 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
function $csb__default() {}
exports.default = $csb__default;
"
`;

exports[`convert-esmodule handles export mutations with variables 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var to;
exports.to = to;
function assign() {
  exports.to = to = \\"test\\";
}
function assign2(to) {
  to = \\"test\\";
}
"
`;

exports[`convert-esmodule handles multiple aliased exports 1`] = `
"Object.defineProperty(exports, \\"f\\", {
  enumerable: true,
  get: function get() {
    return e;
  }
});
Object.defineProperty(exports, \\"getSetObserver\\", {
  enumerable: true,
  get: function get() {
    return _getSetObserver;
  }
});
Object.defineProperty(exports, \\"d\\", {
  enumerable: true,
  get: function get() {
    return c;
  }
});
Object.defineProperty(exports, \\"getMapObserver\\", {
  enumerable: true,
  get: function get() {
    return _getMapObserver;
  }
});
Object.defineProperty(exports, \\"b\\", {
  enumerable: true,
  get: function get() {
    return a;
  }
});
Object.defineProperty(exports, \\"getArrayObserver\\", {
  enumerable: true,
  get: function get() {
    return _getArrayObserver;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
f.test();
d.test();
b.test();
"
`;

exports[`convert-esmodule handles named exports 1`] = `
"Object.defineProperty(exports, \\"a\\", {
  enumerable: true,
  get: function get() {
    return a;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
const a = \\"c\\";
"
`;

exports[`convert-esmodule handles re-exports in named exports 1`] = `
"Object.defineProperty(exports, \\"a\\", {
  enumerable: true,
  get: function get() {
    return $csb__b.a;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__b = require(\\"./b\\");
"
`;

exports[`convert-esmodule handles re-exports in named exports with a alias 1`] = `
"Object.defineProperty(exports, \\"c\\", {
  enumerable: true,
  get: function get() {
    return c;
  }
});
Object.defineProperty(exports, \\"b\\", {
  enumerable: true,
  get: function get() {
    return $csb__b.a;
  }
});
Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var $csb__b = require(\\"./b\\");
const c = \\"test\\";
"
`;

exports[`convert-esmodule hoists imports at bottom 1`] = `
"var $csb__proptypes = require(\\"prop-types\\");
var PropTypes = $_csb__interopRequireDefault($csb__proptypes);
const a = PropTypes.default.a;
function $_csb__interopRequireDefault(obj) {
  return obj && obj.__esModule ? obj : {
    default: obj
  };
}
"
`;

exports[`convert-esmodule ignores comments 1`] = `""`;

exports[`convert-esmodule keeps import order 1`] = `
"var $csb__1 = require(\\"1\\");
var $csb__2 = require(\\"2\\");
"
`;

exports[`convert-esmodule parses and writes chars with linebreaks 1`] = `
"var WS_CHARS = \\"u2000-     　﻿\\";
"
`;

exports[`convert-esmodule renames exports that are already defined, even in block scope 1`] = `
"var __$csb_exports = \\"testtest\\";
function a() {
  __$csb_exports = \\"blaat\\";
}
"
`;

exports[`convert-esmodule works with variables that are named exports 1`] = `
"Object.defineProperty(exports, \\"__esModule\\", {
  value: true
});
var __$csb_exports = [eventedState, eventedShowHideState];
__$csb_exports.push(\\"test\\");
var $csb__default = __$csb_exports;
exports.default = $csb__default;
"
`;
